Fix Manage Icon Alignment

--- a/src/Voat.UI/Content/Sass/_Base.scss
+++ b/src/Voat.UI/Content/Sass/_Base.scss
@@ -2894,7 +2894,6 @@ input[type=checkbox].form-control {
 
     #manage {
         position: relative;
-        top: 2px;
     }
 
     #header-banner {
